# Firulais

./: README.md  kinematic_control_pos.py  test.py
cheeta_pkg_v4/: CMakeLists.txt  package.xml
cheeta_pkg_v4/config/: config_cheeta.rviz  joint_names_cheeta_pkg_v4.yaml  urdf.rviz
cheeta_pkg_v4/launch/: display.launch  gazebo.launch
cheeta_pkg_v4/meshes/: abductor1_link.STL  abductor2_link.STL  abductor3_link.STL  abductor4_link.STL  base_link.STL  muslo1_link.STL  muslo2_link.STL  muslo3_link.STL  muslo4_link.STL  tobillo1_link.STL  tobillo2_link.STL  tobillo3_link.STL  tobillo4_link.STL
cheeta_pkg_v4/src/: Cheetah_Funciones.py  dininv.py  funciones.py  ikine
cheeta_pkg_v4/urdf/: cheeta_pkg_v4.csv  cheeta_pkg_v4.urdf
firulaisv1_ws/devel/: .catkin  setup.sh
freebase-example/launch/: display-sliders.launch  display.launch  display2.launch
freebase-example/urdf/: sample-quadruped.xacro
numeric/fkinv_legs/: gradiante_only_leg.py  newton_only_leg.py
prueba_simulation/: CMakeLists.txt  package.xml
prueba_simulation/src/: robot.py
robot_firulais/: CMakeLists.txt
robot_firulais/config/: firulais.rviz
robot_firulais/src/: diff-fk-test  (+6 more)
ros_ksimulation/: CMakeLists.txt  package.xml
ros_ksimulation/launch/: display-sliders.launch  display.launch
ros_ksimulation/src/: robot.py  utils.py
ros_ksimulation/src/utils/: floor_publisher
ros_ksimulation/urdf/: sample-quadruped.xacro
symbolic/: fk_dh.py  funciones.py  jacob_an_base.py  jacob_geom_base.py  jacob_geom_floating_base.py  jacob_geom_sis0.py  prueba.py  test_anal.py  test_geom.py  vector_pos.py
(+12 files in other folders)
